# Postgres

./: .gitignore  README.md  development.txt  pyproject.toml  requirements.txt  teknisk_kode
src/Postgres/: IO.py  __init__.py
src/Postgres.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_Execute.py  test_IO.py  test_Postgres_Connect.py  test_PrepData.py  test_SQL.py
